[bdist_wheel]
universal = False

[metadata]
name = cython-sounddevice
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/cython-sounddevice
description = Cython wrapper for PortAudio
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude = tests

[options.package_data]
* = README.md, requirements.txt
cysounddevice = *.pxd

[tool:pytest]
testpaths = tests
