[bdist_wheel]
universal = False

[metadata]
name = cython-sounddevice
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/cython-sounddevice
description = Cython wrapper for PortAudio
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Software Development :: Libraries
    Programming Language :: Cython
    Programming Language :: Python :: 3


[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests
    tools

[options.package_data]
* = LICENSE, README.md, requirements.txt
cysounddevice = *.pxd

[tool:pytest]
testpaths = tests
